--- a/language/resource.language.ar_sa/strings.po
+++ b/language/resource.language.ar_sa/strings.po
@@ -22,12 +22,8 @@ msgid "Estuary skin by phil65. (Kodi's default skin)"
 msgstr "مظهر Estuary بواسطة phil65. ( مظهر كودي الافتراضي )"
 
 msgctxt "Addon Description"
-msgid ""
-"Estuary is the default skin for Kodi 17.0 and above. It attempts to be easy "
-"for first time Kodi users to understand and use."
-msgstr ""
-"Estuary هو المظهر الافتراضي ل كودي الإصدار 17.0 و أعلى. يطمح بأن يكون سهل "
-"الاستخدام والفهم لمستخدمين كودي الجدد."
+msgid "Estuary is the default skin for Kodi 17.0 and above. It attempts to be easy for first time Kodi users to understand and use."
+msgstr "Estuary هو المظهر الافتراضي ل كودي الإصدار 17.0 و أعلى. يطمح بأن يكون سهل الاستخدام والفهم لمستخدمين كودي الجدد."
 
 msgctxt "Addon Disclaimer"
 msgid "Estuary is the default skin for Kodi, removing it may cause issues"
